<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>game.server.manager</groupId>
        <artifactId>game-server-manager</artifactId>
        <version>1.0.0</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>game-server-manager-generate</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>game-server-manager-generate</name>

    <description>game-server-manager-generate</description>

    <properties>
        <java.version>17</java.version>
    </properties>

    <dependencies>

        <!--  web -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-web</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!--  api -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-api</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!--  doc -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-doc</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!--  event -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-event</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- redis -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-redis</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!--spring缓存-->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-cache</artifactId>
        </dependency>

        <!-- 授权相关 -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-auth</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- 日志相关 -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-log</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- mapstruct -->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-mapstruct</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!--  数据库相关-->
        <dependency>
            <groupId>game.server.manager</groupId>
            <artifactId>game-server-manager-mybatis-plus</artifactId>
            <version>1.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>dynamic-datasource-spring-boot-starter</artifactId>
            <version>3.5.1</version>
        </dependency>

        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>8.0.30</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-jdbc</artifactId>
            <version>5.3.22</version>
        </dependency>

        <!--velocity代码生成使用模板 -->
        <dependency>
            <groupId>org.apache.velocity</groupId>
            <artifactId>velocity-engine-core</artifactId>
            <version>2.3</version>
        </dependency>

        <dependency>
            <groupId>com.googlecode.aviator</groupId>
            <artifactId>aviator</artifactId>
            <version>5.3.1</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.11.0</version>
            <scope>compile</scope>
        </dependency>

        <!--        word转pdf  -->
        <dependency>
            <groupId>org.docx4j</groupId>
            <artifactId>docx4j-JAXB-Internal</artifactId>
            <version>8.3.8</version>
            <exclusions>
                <exclusion>
                    <artifactId>commons-io</artifactId>
                    <groupId>commons-io</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>xmlgraphics-commons</artifactId>
                    <groupId>org.apache.xmlgraphics</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.docx4j</groupId>
            <artifactId>docx4j-export-fo</artifactId>
            <version>11.4.7</version>
            <exclusions>
                <exclusion>
                    <artifactId>commons-io</artifactId>
                    <groupId>commons-io</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <!--logback输出JSON日志-->
        <dependency>
            <groupId>ch.qos.logback.contrib</groupId>
            <artifactId>logback-json-classic</artifactId>
            <version>0.1.5</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback.contrib</groupId>
            <artifactId>logback-jackson</artifactId>
            <version>0.1.5</version>
        </dependency>

    </dependencies>

    <build>
        <finalName>app</finalName>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- mapstruct 需要的配置 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
